# Raytracer

./: readme.md
GroundUp/: CMakeLists.txt  Ray.cpp  Ray.h
InAWeekend/: CMakeLists.txt  camera.h  hitable.h  hitable_list.h  main.cpp  material.h  ray.h  sphere.h  vec3.cpp  vec3.h
InOneWeekend/: CMakeLists.txt  camera.h  hitable.h  hitable_list.h  main.cpp  material.h  ray.h  shader.h  sphere.h  vec3.h  window.h
Scratchpixel/: CMakeLists.txt  IO.h  Light.h  MathUtils.h  Matrix.cpp  Matrix.h  Object.h  Ray.cpp  Ray.h  Sphere.h  Triangle.h  Vec2.h  Vec3.cpp  Vec3.h  main.cpp
